kodekloud/mysample.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysample-service
spec:
  selector:
    app: mysample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysample-deployment
  labels:
    app: mysample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysample
  template:
    metadata:
      labels:
        app: mysample
    spec:
      containers:
      - name: mysample
        image: microsoft/dotnet-samples:aspnetapp
        ports:
        - containerPort: 80
