kodekloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
  - host: kts.swipay.com
    http:
      paths:
      - path: /myapp
        backend:
          serviceName: mysample-service
          servicePort: 80
